src/objects/CalloutRequest__c.object
<CustomObject>
    <description>Callout requests made on behalf of the application</description>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the callout in milliseconds</description>
        <inlineHelpText>Duration of the callout in milliseconds</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint URL of external server&apos;s API</description>
        <inlineHelpText>Endpoint URL of external server&apos;s API</inlineHelpText>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the Queueable Apex job associated with this callout, if any</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the Queueable Apex job associated with this callout, if any</inlineHelpText>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>HTTP Method to be used for the callout (GET, POST, etc.)</description>
        <inlineHelpText>HTTP Method to be used for the callout (GET, POST, etc.)</inlineHelpText>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>GET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <description>Timestamp of when the callout was sent</description>
        <inlineHelpText>Timestamp of when the callout was sent</inlineHelpText>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout for the callout in seconds</description>
        <inlineHelpText>Timeout for the callout in seconds</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Callout Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Callout Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>